fix(primitives): Vertically align links

--- a/assets/styles/@tcds/typography/globals.scss
+++ b/assets/styles/@tcds/typography/globals.scss
@@ -14,6 +14,7 @@ body {
 :where(a) {
   color: theme-color("link");
   text-decoration: underline;
+  vertical-align: middle;
   transition: color animation("productive");
 }
 
